# Digit-Recogition-NN

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Makefile  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
